Debouce auto-search

--- a/sharinpix/src/classes/SharinPixSearchController.cls
+++ b/sharinpix/src/classes/SharinPixSearchController.cls
@@ -1,42 +1,9 @@
 public with sharing class SharinPixSearchController {
-    private static Client clientInstance = Client.getInstance();
-    private static String baseUrl = 'https://app.sharinpix.com/search?search_bar=false&token=';
-    //private static Client clientInstance = new Client('sharinpix://34edb5d0-4dbf-47e5-a11d-9ddc34a285da:qpk0XHmupySkCsIfPXw1QXsSyNm8i7tu-baS7JzmZSdufQQ@azhar.ngrok.io/api/v1'); // secret !
-    //private static String baseUrl = 'https://azhar.ngrok.io/search?search_bar=false&token=';
+    //private static Client clientInstance = Client.getInstance();
+    //private static String baseUrl = 'https://app.sharinpix.com/search?search_bar=false&token=';
+    private static Client clientInstance = new Client('sharinpix://58b6d4cd-4bf9-47df-a31a-61b22348bf99:Lv0omG-xyArw4QyTP-fI8WbKegXvTcPwzyfgQGZ_3bnwmmI@scpix-pr-1324.herokuapp.com/api/v1'); // secret !
+    private static String baseUrl = 'https://scpix-pr-1324.herokuapp.com/search?search_bar=false&token=';
     private static final Integer TOKEN_SIZE = 25;
-
-    @AuraEnabled
-    public static Map<String, List<Report>> getReports() {
-        List<Report> allReports = [SELECT Id, Name, FolderName FROM Report WHERE Format = 'Tabular' ORDER BY FolderName, Name];
-        String currentFolderName = null, previousFolderName = null;
-        Map<String, List<Report>> reportFolders = new Map<String, List<Report>>();
-        for (Report rep : allReports) {
-            currentFolderName = rep.FolderName;
-            if (currentFolderName != previousFolderName) {
-                reportFolders.put(currentFolderName, new List<Report> { rep });
-            } else {
-                reportFolders.get(currentFolderName).add(rep);
-            }
-            previousFolderName = currentFolderName;
-        }
-        return reportFolders;
-    }
-
-    @AuraEnabled
-    public static List<String> getAllTags() {
-        Utils u = new Utils(clientInstance);
-        List<Object> allTags;
-        if (!Test.isRunningTest()) {
-            allTags = u.getOrgTags();
-        } else {
-            allTags = new List<Object> { new Map<String, Object> { 'name' => 'Tag 1' } };
-        }
-        List<String> tagNames = new List<String>();
-        for (Object o : allTags) {
-            tagNames.add((String)((Map<String, Object>)o).get('name'));
-        }
-        return tagNames;
-    }
 
     @AuraEnabled
     public static Map<String, Object> generateUrlAndTokens(Id reportId, List<Object> reportParameters, String tagOperator, List<String> tagNames) {
@@ -63,7 +30,9 @@ public with sharing class SharinPixSearchController {
         try {
             Reports.ReportResults results;
             if (reportParameters != null && reportParameters.size() != 0) {
-                /*Reports.ReportDescribeResult reportDescribe = Reports.ReportManager.describeReport(reportId);
+                /*
+                // Code when report parameters passed in next version
+                Reports.ReportDescribeResult reportDescribe = Reports.ReportManager.describeReport(reportId);
                 Reports.ReportMetadata reportMetadata = reportDescribe.getReportMetadata();
                 Reports.ReportFilter filter;
                 String reportParameter;
@@ -95,6 +64,7 @@ public with sharing class SharinPixSearchController {
         }
     }
 
+    @TestVisible
     private static String generateQueryString(List<String> albumIds, List<String> tagNames, String tagOperator) {
         if (albumIds == null) albumIds = new List<String>();
         if (tagNames == null) tagNames = new List<String>();
