--- a/sharinpix/src/classes/SharinPixSearchControllerTest.cls
+++ b/sharinpix/src/classes/SharinPixSearchControllerTest.cls
@@ -1,22 +1,5 @@
 @isTest
 public class SharinPixSearchControllerTest {
-
-    @isTest(seeAllData=true)
-    static void testGetReports() {
-        Test.startTest();
-        Map<String, List<Report>> reports = SharinPixSearchController.getReports();
-        Test.stopTest();
-        System.assert(reports.get('SharinPix Sample Reports') != null);
-    }
-
-    @isTest
-    static void testGetAllTags() {
-        Test.startTest();
-        List<String> tags = SharinPixSearchController.getAllTags();
-        Test.stopTest();
-        System.assertEquals('Tag 1', tags[0]);
-    }
-
     @isTest(seeAllData=true)
     static void testGenerateUrlAndTokens() {
         Id reportId = [SELECT Id FROM Report WHERE DeveloperName = 'SharinPix_Sample_Account_Report' LIMIT 1].Id;
@@ -28,7 +11,19 @@ public class SharinPixSearchControllerTest {
 
         String baseUrl = (String)urlAndTokens.get('baseUrl');
         List<String> tokens = (List<String>)urlAndTokens.get('tokens');
-        System.assert(baseUrl != null);
+        System.assert(baseUrl != null && baseUrl != '');
         System.assert(tokens != null);
+    }
+
+    @isTest
+    static void testGenerateQueryString() {
+        Test.startTest();
+        String queryStr = SharinPixSearchController.generateQueryString(
+            new List<String> { 'album1', 'album2' },
+            new List<String> { 'tag1', 'tag2' },
+            'OR'
+        );
+        Test.stopTest();
+        System.assertEquals('tags:(+("album1" "album2") +("tag1" OR "tag2"))', queryStr);
     }
 }
