getAppHost instead of get host

--- a/sharinpix/src/classes/EinsteinDatasetController.cls
+++ b/sharinpix/src/classes/EinsteinDatasetController.cls
@@ -46,6 +46,6 @@ public with sharing class EinsteinDatasetController {
         };
         Client clientInstance = Client.getInstance();
 
-        albumUrl = clientInstance.getHost() +'/pagelayout/' +albumId +'?token='+clientInstance.token(params);
+        albumUrl = clientInstance.getAppHost() +'/pagelayout/' +albumId +'?token='+clientInstance.token(params);
     }
 }
