--- a/sharinpix/src/classes/MobileUploadControllerTest.cls
+++ b/sharinpix/src/classes/MobileUploadControllerTest.cls
@@ -12,7 +12,7 @@ public class MobileUploadControllerTest {
     -- 03-APR-2016  ABE   1.0      Initial version
     ----------------------------------------------------------------------
     */
-    static testMethod void testAppUrl() {
+    static testMethod void testAppUrl_AllOptions() {
         MobileUploadController mUploadCtrl = new MobileUploadController();
         mUploadCtrl.jobAlbumId = 'TestId';
         mUploadCtrl.jobName = 'TestName';
@@ -27,8 +27,26 @@ public class MobileUploadControllerTest {
         String token = appUrl.substringAfter('token=');
         String[] tokenParts = token.split('\\.');
         String decodedData = EncodingUtil.base64Decode(tokenParts[1]).toString();
-        System.assert(decodedData.contains('TestId'));
-        System.assert(decodedData.contains('TestName'));
-        System.assert(decodedData.contains('{"grayscale":true}'));
+        System.assert(decodedData.contains('"album_id":"TestId"'));
+        System.assert(decodedData.contains('"name":"TestName"'));
+        System.assert(decodedData.contains('"native_app_options":{"grayscale":true}'));
+    }
+
+    static testMethod void testAppUrl_NoOptions() {
+        MobileUploadController mUploadCtrl = new MobileUploadController();
+        mUploadCtrl.jobAlbumId = 'TestId';
+
+        Test.startTest();
+        PageReference pageRef = mUploadCtrl.generateAppUrl();
+        Test.stopTest();
+
+        String appUrl = pageRef.getUrl();
+        System.assert(appUrl.contains('native_upload'));
+        String token = appUrl.substringAfter('token=');
+        String[] tokenParts = token.split('\\.');
+        String decodedData = EncodingUtil.base64Decode(tokenParts[1]).toString();
+        System.assert(decodedData.contains('"album_id":"TestId"'));
+        System.assert(decodedData.contains('"name":"TestId"'));
+        System.assert(decodedData.contains('"native_app_options":{}'));
     }
 }
