--- a/sharinpix/src/classes/Utils.cls
+++ b/sharinpix/src/classes/Utils.cls
@@ -445,22 +445,29 @@ global with sharing class Utils {
     /**
      * Generate SharinPix URL to launch mobile application
      * @param  albumId        Album Id to save job's images into
-     * @param  name           Name of job in application
-     * @param  jobOptions     Additional options passed to job
-     * @param  linkExpiration Link expiration delay in seconds
+     * @param  options        Additional options passed to job (String name, Map<String, Object> appOptions, Integer linkExpiration)
      * @return                App URL to open SharinPix mobile app
      */
-    global String generateMobileAppUrl(String albumId, String name, Map<String, Object> options, Integer linkExpiration) {
+    global String generateMobileAppUrl(String albumId, Map<String, Object> options) {
         if (String.isBlank(albumId)) return null;
         albumId = sanitizeId(albumId);
-        if (String.isBlank(name))    name = albumId;
-        if (linkExpiration == null)  linkExpiration = 300;
+
+        if (options == null) options = new Map<String, Object>();
+
+        String name = (String)options.get('name');
+        if (String.isBlank(name)) name = albumId;
+
+        Map<String, Object> appOptions = (Map<String, Object>)options.get('appOptions');
+        if (appOptions == null) appOptions = new Map<String, Object>();
+
+        Integer linkExpiration = (Integer)options.get('linkExpiration');
+        if (linkExpiration == null) linkExpiration = 300;
 
         Map<String, Object> params = new Map<String, Object> {
             'album_id' => albumId,
             'name' => name,
             'exp' => (linkExpiration != 0) ? (DateTime.now().getTime()/1000) + linkExpiration : 0,
-            'native_app_options' => options,
+            'native_app_options' => appOptions,
             'abilities' => new Map<String, Object> {
                 albumId => new Map<String, Object> {
                     'Access' => new Map<String, Boolean> {
@@ -496,6 +503,26 @@ global with sharing class Utils {
             sliced.add(original[i]);
         }
         return sliced;
+    }
+
+    /**
+     * Generate SharinPix URL to launch mobile application
+     * @param  albumId        Album Id to save job's images into
+     * @param  name           Name of job in application
+     * @param  jobOptions     Additional options passed to job
+     * @param  linkExpiration Link expiration delay in seconds
+     * @return                App URL to open SharinPix mobile app
+     */
+    @deprecated
+    global String generateMobileAppUrl(String albumId, String name, Map<String, Object> options, Integer linkExpiration) {
+        return generateMobileAppUrl(
+            albumId,
+            new Map<String, Object> {
+                'name' => name,
+                'appOptions' => options,
+                'linkExpiration' => linkExpiration
+            }
+        );
     }
 
 }
