--- a/sharinpix/src/classes/SharinPixSearchController.cls
+++ b/sharinpix/src/classes/SharinPixSearchController.cls
@@ -1,13 +1,12 @@
 public with sharing class SharinPixSearchController {
-    //private static Client clientInstance = Client.getInstance();
-    private static Client clientInstance = new Client('sharinpix://58b6d4cd-4bf9-47df-a31a-61b22348bf99:Lv0omG-xyArw4QyTP-fI8WbKegXvTcPwzyfgQGZ_3bnwmmI@scpix-pr-1324.herokuapp.com/api/v1'); // secret !
-    private static final Integer TOKEN_SIZE = 25;
+    private static Client clientInstance = Client.getInstance();
+    private static final Integer TOKEN_SIZE = 2; // TODO
 
     @AuraEnabled
     public static Map<String, Object> generateUrlAndTokens(Id reportId, List<Object> reportParameters, String tagOperator, List<String> tagNames) {
         List<String> tokens = new List<String>();
         Map<String, Object> response = new Map<String, Object> {
-            'baseUrl' => clientInstance.getAppHost() + '/search?search_bar=false&token=',
+            'baseUrl' => clientInstance.getAppHost() + '?token=' + clientInstance.token(new Map<String, Object> { 'path' => '/search?search_bar=false' }),
             'tokens' => tokens
         };
 
